samples/_failures_safe/1761530994_f6e01a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3708525f.c: In function ‘main’:
./samples/SAFE/__tmp_3708525f.c:160:23: error: expected ‘;’ at end of input
  160 |                 result
      |                       ^
      |                       ;
./samples/SAFE/__tmp_3708525f.c:160:17: error: expected declaration or statement at end of input
  160 |                 result
      |                 ^~~~~~
./samples/SAFE/__tmp_3708525f.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3708525f.c:160:17: error: expected declaration or statement at end of input
